# EngineeringThesis

./: .gitignore  .pre-commit-config.yaml  README.md  basedpyrightconfig.json  cjte.py  diagram_baroreflex.xcf  finding_errors_in_peaks.ipynb  main.ipynb  main.py  pyproject.toml  requirements.txt  results_10breaths.csv  results_15breaths.csv  results_6breaths.csv  results_baseline.csv  ruff.toml  simc.ipynb  tegpt.py  test.py  utils.py
biomeeting/: biomeet.ipynb  calc_biomeeting.ipynb
conferences/biomeeting_2025/: biomeet.ipynb
conferences/health_tech_congress_2025/: calculations.ipynb
conferences/simc_2025/: presso.ipynb
examples/: dvp.ipynb  finding_peaks.ipynb  main.ipynb  synthetic.ipynb
presentation/: main.tex  pre.sty  refs.bib  title.tex
presentation/sections/: application.tex  conclusions.tex  implementation.tex  motivation.tex  theoretical_fundations.tex
simc/: simc.ipynb
src/: autonomic.py  autoregulation.py  baroreflex.py  constants.py  main.py  mytypes.py
src/common/: constants.py  logger.py  mytypes.py
src/data_process/: fft.py  utils.py
src/entropy/: cjte.py  entropy.py  entropy_helpers.py  te.py  transfer_entropy.py
src/plots/: __init__.py  baroreflex.py  box_plots.py  constatns.py  dv_plots.py  signal.py  signal_plots.py  synthetic.py
src/preprocessing/: patient_data_loader.py
src/processing/: bio_signals_processing.py
src/signal_processing/: bio_signals_processing.py  fft.py
src/statistics/: __init__.py  anova.py  (+1 more)
thesis/: main.synctex(busy)  main.tex  pre.sty  refs.bib  title.tex
utils/: entropy.py  entropy_helpers.py
(+49 files in other folders)
