[project]
authors = [{ name = "Ignacy Berent" }]
name = "Engineering-Thesis"
version = "0.1.0"
description = "A comparative analysis of algorithms for transfer entropy and conditional joint transfer entropy with consideration of a modulating variable"
readme = "README.md"
requires-python = ">=3.14,<3.15.0"
dependencies = [
  "ipykernel>=7.1.0",
  "ipython>=9.6.0",
  "jupyter>=1.1.1",
  "loguru>=0.7.3",
  "matplotlib>=3.10.7",
  "neurokit2>=0.2.12",
  "numpy>=2.3.4",
  "pandas>=2.3.3",
  "scipy>=1.16.2",
]

[dependency-groups]
dev = ["mypy>=1.18.2", "pre-commit>=4.3.0", "ruff>=0.14.2"]

[tool.mypy]
files = ["src"]
python_version = "3.14"
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
strict_equality = true
pretty = true
show_error_codes = true
namespace_packages = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
